# smart-home

./: .gitignore  .style.yapf  README.md  config.yml  continuous-run.sh  kill.sh  run.py  run.sh
.githooks/: pre-commit
crespin-mobile/: Makefile  README.md  continuous-run.sh
crespin-mobile/include/: communication.h  crespin.h
crespin-mobile/src/: communication.c  crespin.c
crespin-mobile/tests/: VizuCrespin.ipynb  VizuCrespin2.ipynb  motor.py  motors_stop.py
esp8266-ac-dimmer/: platformio.ini
esp8266-watering/: README.md  Watering.fzz  platformio.ini
everyday-calendar/: README.md  continuous-run.sh  pyproject.toml
everyday-calendar/everydaycalendar/: calendars.py  display.py  server.py  template.html
smarthome/: server.py
smarthome-server/: README.md  continuous-run.sh  kill.sh  pyproject.toml  requirements.txt  run.sh  server.py  sync.sh
smarthome-server/smarthome/: api.py  celery.py  scenarios.py  sequences.py  server.py
smarthome-server/smarthome/data/: config.yml
smarthome-server/smarthome/devices/: _Crespin.py  _ESPCustomDimmer.py  _ESPEasyLights.py  _EverydayCalendar.py  _Generic.py  _HueLamp.py  _IRRemote.py  _NAS.py  _RFRemote.py  __init__.py
smarthome-server/smarthome/misc/: config.py  dotdict.py  utils.py  wrappers.py
smarthome-server/smarthome/scenarios/: _Generic.py  _Sleep.py  __init__.py
smarthome-server/smarthome/sensors/: _Sun.py  _Temperature.py  _Threads.py  _Weather.py  __init__.py
smarthome-server/smarthome/triggers/: _Calendar.py  __init__.py
smarthome-server/smarthome/watering/: __init__.py  api.py  lib.py
smarthome-server/smarthome/webui/: index.html  manifest.json  watering.html
smarthome-server/smarthome/webui/css/: style.css  watering.css
smarthome-server/smarthome/webui/js/: calendar.js  domoticz.js  generic.js  sequences.js  watering.js  watering_summary.js
smarthome-server/webui/: index.html  manifest.json  watering.html
smarthome-server/webui/css/: style.css
smarthome-server/webui/js/: app_bkp.js  display.js  domoticz.js  generic.js
webui/: index.html  index_bkp.html  test.py  watering.html
(+54 files in other folders)
